# memprofilerx

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/getting-started/: quickstart.md
examples/: advanced_analysis.py  custom_callback.py  export_all_formats.py  global_tracker.py  html_report.py  track_basic.py  track_with_gc.py
src/memprofilerx/: __init__.py  cli.py  reporter.py  tracker.py
tests/: conftest.py  test_reporter.py  test_tracker.py
